fix scroll txt overflow on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,7 +54,6 @@ nav {
 }
 
 article {
-    height: 100vh;
     background-color: #ffffff;
 
     div {
@@ -86,8 +85,12 @@ article {
 
 article, .main-container {
     box-sizing: border-box;
-    height: auto; 
+    height: 100vh;
     padding: 5rem 0 15rem;
+}
+
+#article_example {
+    height: auto;
 }
 
 .main-container {
